--- a/02-1 CLI Programs.ipynb
+++ b/02-1 CLI Programs.ipynb
@@ -230,7 +230,7 @@
     "  Downloading file to ./pg27525.txt\n",
     "  ```\n",
     "\n",
-    "    Reuse your `webget` module from exercises in 07-Functions and Modules.\n",
+    "    Reuse your `webget` module from exercises in notebook: 02-0c Modules.\n",
     "  \n",
     "  2. Modify the above program, so that it can download a list of files from stdin. That is, so that you can reuse the output of one CLI command as input to your program. \n",
     "\n",
@@ -257,6 +257,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
