--- a/07-3 selenium.ipynb
+++ b/07-3 selenium.ipynb
@@ -49,7 +49,9 @@
     "or\n",
     "```bash\n",
     "pip install selenium\n",
-    "```\n"
+    "```\n",
+    "#### Download and register the geckodriver\n",
+    "[see short guide here](https://stackoverflow.com/questions/40208051/selenium-using-python-geckodriver-executable-needs-to-be-in-path)"
    ]
   },
   {
@@ -63,6 +65,79 @@
     "## Automatically Finding Names, addresses and numbers\n",
     "\n",
     "If you run the [selenium_krak.py](selenium_krak.py) script from the command line, you will observe, that it opens a Firefox window, enters a search string (*\"Møller\"*), clicks the links *\"Personer\"* to search for persons only, and finally it prints the HTML sources of the page.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"9d0687c1-0cc4-45f8-abbb-f58886b65d2c\", element=\"002ce803-e7ba-4df9-8393-0e3816db8d73\")>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['A Hartmann\\n Præstehusene 124 \\n 2620 Albertslund \\n43 45 25...\\n',\n",
+       " 'Aage Frederik Hartmann Ditlevsen\\n Højmose Vænge 25, 2. tv \\n 2970 Hørsholm \\n29 82 73...\\n',\n",
+       " 'Aase Hartmann Kromann-Olsen\\n Elmholt 11 \\n 9560 Hadsund \\n61 81 03...\\n',\n",
+       " 'Adam Hartmann-Petersen\\n Enghavevej 28 \\n 5290 Marslev \\n29 89 81...\\n',\n",
+       " 'Agnethe Hartmann Hansen\\n Skovsyrevej 66 \\n 4700 Næstved \\n40 63 19...\\n',\n",
+       " 'Aiya Reginalda Hartmann Jensen\\n Mosestræde 26 \\n Thurø \\n21 33 29...\\n',\n",
+       " 'Alberte Hartmann Bertelsen\\n Gugvej 123 \\n 9210 Aalborg SØ \\n25 80 90...\\n',\n",
+       " 'Alex Hartmann\\n Skæring Havvej 129 \\n 8250 Egå \\n40 32 02...\\n',\n",
+       " 'Alex Hartmann\\n Fuglebakken 9 \\n Brylle \\n22 94 00...\\n',\n",
+       " 'Alexander Hartmann\\n Strandgaardsvej 38 \\n 7120 Vejle Øst \\n40 52 05...4\\n',\n",
+       " 'Alexander Sune Hartmann\\n Inger Christensens Gade 24, 3. tv \\n 8220 Brabrand \\n42 63 99...\\n',\n",
+       " 'Alexandra Tatiana-Louise Hartmann\\n Enighedsvej 6E, 4. tv \\n 2920 Charlottenlund \\n42 26 06...\\n',\n",
+       " 'Alf Hartmann\\n Ølandsvej 35 \\n 4681 Herfølge \\n21 28 21...\\n',\n",
+       " 'Alf Hartmann Sørensen\\n Ølandsvej 35 \\n 4681 Herfølge \\n21 28 21...\\n',\n",
+       " 'Alice Hartmann Bladt\\n Folevej 60 \\n Fole \\n74 82 21...\\n',\n",
+       " 'Alice Hartmann Bladt Boisen\\n Folevej 60 \\n Fole \\n30 49 60...4\\n',\n",
+       " 'Allan Hartmann\\n Tinghøjvej 57A, 3. th \\n 2860 Søborg \\n40 54 40...\\n',\n",
+       " 'Allan Hartmann Andersen\\n Skovbrynet 30 \\n 8500 Grenaa \\n21 42 54...3\\n',\n",
+       " 'Allan Hartmann Bech\\n Kuhlaus Vej 13 \\n 9900 Frederikshavn \\n41 29 43...\\n',\n",
+       " 'Allan Hartmann Ditlevsen\\n Rydevænget 75, 3. tv \\n 8210 Aarhus V \\n60 93 93...\\n',\n",
+       " 'Allan Hartmann Haandbæk\\n Lykkesminde 5 \\n 5330 Munkebo \\n51 30 15...\\n',\n",
+       " 'Allan Hartmann Hansen\\n Eskærhøjvej 58 \\n 6100 Haderslev \\n29 82 32...\\n',\n",
+       " 'Allan Hartmann Larsen\\n Perlestikkervej 9, 4. tv \\n 2400 København NV \\n25 75 99...\\n',\n",
+       " 'Alma Howland Hartmann\\n Højskolevej 12 \\n Snoghøj \\n27 58 07...\\n',\n",
+       " 'Amalie Hartmann Levå Hansen\\n\\n40 41 61...Vis nummer\\n40 41 61...\\n']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import selenium_krak\n",
+    "res = selenium_krak.get_info('Hartmann')\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'There were 25 Hartmanns on Krak'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'There were {} Hartmanns on Krak'.format(len(res))"
    ]
   },
   {
@@ -120,7 +195,7 @@
     "  * `browser.find_elements_by_partial_link_text(text)` ... finds `<a>` elements that contain the text\n",
     "provided\n",
     "  * `browser.find_elements_by_name(name)` ... finds elements with a matching name attribute value\n",
-    "  * `browser.find_elements_by_tag_name(name)` ... finds elements with a matching tag name (case insensitive; an `<a>` element is matched by 'a' and 'A')\n",
+    "  * `browser.find_elements_by_tag_name(tagname)` ... finds elements with a matching tag name (case insensitive; an `<a>` element is matched by 'a' and 'A')\n",
     "  \n",
     "For more information on finding elements on a page, see http://selenium-python.readthedocs.io/locating-elements.html#\n",
     "  \n"
@@ -182,12 +257,10 @@
    "source": [
     "## Class exercise\n",
     "Use selenium to automate a search on dba.dk\n",
-    "- search for anything \n",
+    "- search for 'cykel'\n",
     "- choose 'private' from the announcements\n",
     "- click on price to get them sorted by price.\n",
-    "- use BeautifulSoup to list all names of products and their prices each on one line\n",
-    "- click 'næste' to load another page\n",
-    "- change it into a function with argument for: search phrase and number of pages to list."
+    "- list all product names and their prices for the 5 most expencive bikes"
    ]
   }
  ],
