removed commander keen

--- a/02-0b Functions.ipynb
+++ b/02-0b Functions.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +192,17 @@
      "text": [
       "1.25\n"
      ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "apply_division() missing 1 required positional argument: 'dividend'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-ba8a5ed2872b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mapply_division\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mapply_division\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: apply_division() missing 1 required positional argument: 'dividend'"
+     ]
     }
    ],
    "source": [
@@ -199,7 +210,8 @@
     "    result = dividend / divisor\n",
     "    print(result)\n",
     "    \n",
-    "apply_division(5, 4)"
+    "apply_division(5, 4)\n",
+    "apply_division()"
    ]
   },
   {
@@ -322,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Call', 'me', 'Ahab.']"
+       "'Call'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,10 +360,11 @@
     "    \"\"\"\n",
     "    \n",
     "    fst_sentence = 'Call me ' + name + '.'\n",
-    "    return fst_sentence.split()\n",
+    "    return fst_sentence.split(), 'hoho', 9 \n",
     "    \n",
+    "result,string,val = modify_sentence('Ahab')\n",
     "result = modify_sentence('Ahab')\n",
-    "result"
+    "result[0][0]"
    ]
   },
   {
@@ -523,6 +536,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
