--- a/01-1 Intro.ipynb
+++ b/01-1 Intro.ipynb
@@ -235,7 +235,7 @@
     "- Another forum entry collecting some datasets: https://hn.algolia.com/?query=open%20data&sort=byPopularity&prefix&page=0&dateRange=all&type=story\n",
     "\n",
     "#### Handin\n",
-    "For each handin you must push a solution the exercise on github and send a link to the solution to this email address: pythonvalg@gmail.com by monday 8.00 am at the latest.\n",
+    "For each handin you must push a solution the exercise on github. One repo for the whole semester and each week has its own folder named week1, week2,... etc.\n",
     "\n",
     "Each week the exercise solution must be pushed to the same repo in a new folder placed in the root of the repo\n",
     "\n",
