updated cli and argparse

--- a/02-0c Modules.ipynb
+++ b/02-0c Modules.ipynb
@@ -101,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +274,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello from module\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sub_folder import my_test\n",
+    "my_test.print_string('hello from module')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": true
@@ -394,6 +412,28 @@
     "      pass\n",
     "  ```\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = tuple([1,2])\n",
+    "l = list(t)\n",
+    "l"
    ]
   },
   {
