--- a/02-1b argparse.ipynb
+++ b/02-1b argparse.ipynb
@@ -2,31 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# What is Linear Algebra?\n",
-    "\n",
-    "Linear algebra is a branch of mathematics, think oflinear algebra as the mathematics of data. Matrices and vectors are the language of data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Agenda\n",
-    "\n",
-    "* CLI arguments and CLI scripting\n",
-    "* Sets\n",
-    "* Graphs\n",
-    "* PageRank"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -131,7 +106,7 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "Do what we just did on class:\n",
+    "Do what we just did in class:\n",
     "\n",
     "1. Create a file with a `if __name__ == '__main__':` clause\n",
     "2. Use the `argparse` library to create an `ArgumentParser`\n",
@@ -223,6 +198,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
