--- a/02-2 Working with Files.ipynb
+++ b/02-2 Working with Files.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -32,9 +32,6 @@
      "output_type": "stream",
      "text": [
       "Downloading file to ./pi_30_digits.txt\n",
-      "3.1415926535\n",
-      "  8979323846\n",
-      "  2643383279\n",
       "\n"
      ]
     }
@@ -48,7 +45,7 @@
     "\n",
     "with open('pi_30_digits.txt') as file_object:\n",
     "    contents = file_object.read()\n",
-    "    print(contents)"
+    "print(file_object.read())\n"
    ]
   },
   {
@@ -125,7 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ho\n"
+     ]
+    }
+   ],
+   "source": [
+    "def some_func():\n",
+    "    pass\n",
+    "print('ho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -204,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -215,6 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['3.1415926535\\n', '  8979323846\\n', '  2643383279\\n']\n",
       "3.1415926535\n",
       "  8979323846\n",
       "  2643383279\n"
@@ -226,7 +243,7 @@
     "\n",
     "with open(filename) as file_object:\n",
     "    lines = file_object.readlines()\n",
-    "\n",
+    "    print(lines)\n",
     "for line in lines:\n",
     "    print(line.rstrip())"
    ]
@@ -297,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -323,7 +340,7 @@
     "webget.download(url)\n",
     "\n",
     "filename = 'pi_million_digits.txt'\n",
-    "with open(filename) as file_object:\n",
+    "with open(filename,'r') as file_object:\n",
     "    lines = file_object.readlines()\n",
     "    \n",
     "pi_string = ''\n",
@@ -548,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -595,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -605,10 +622,10 @@
     {
      "data": {
       "text/plain": [
-       "{'1': 'a', '2': [1, 2, 3]}"
+       "dict"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +639,7 @@
     "with open(filename) as f_obj: \n",
     "    de_numbers = json.load(f_obj)\n",
     "\n",
-    "de_numbers"
+    "type(de_numbers)"
    ]
   },
   {
@@ -809,13 +826,49 @@
     "url = 'http://data.kk.dk/dataset/76ecf368-bf2d-46a2-bcf8-adaf37662528/resource/9286af17-f74e-46c9-a428-9fb707542189/download/befkbhalderstatkode.csv'\n",
     "webget.download(url)\n",
     "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AAR', 'BYDEL', 'ALDER', 'STATKODE', 'PERSONER']\n",
+      "['2015', '1', '0', '5100', '614']\n",
+      "['2015', '1', '0', '5104', '2']\n",
+      "['2015', '1', '0', '5106', '1']\n",
+      "['2015', '1', '0', '5110', '1']\n",
+      "['2015', '1', '0', '5120', '4']\n",
+      "['2015', '1', '0', '5126', '1']\n",
+      "['2015', '1', '0', '5130', '5']\n",
+      "['2015', '1', '0', '5140', '3']\n",
+      "['2015', '1', '0', '5150', '5']\n",
+      "['2015', '1', '0', '5154', '1']\n",
+      "['2015', '1', '0', '5164', '3']\n",
+      "['2015', '1', '0', '5170', '3']\n",
+      "['2015', '1', '0', '5180', '3']\n",
+      "['2015', '1', '0', '5228', '1']\n",
+      "['2015', '1', '0', '5306', '2']\n",
+      "['2015', '1', '0', '5390', '1']\n",
+      "['2015', '1', '0', '5448', '1']\n",
+      "['2015', '1', '0', '5464', '1']\n",
+      "['2015', '1', '0', '5472', '1']\n"
+     ]
+    }
+   ],
+   "source": [
     "filename = './befkbhalderstatkode.csv'\n",
     "with open(filename) as f_obj:\n",
     "    content = f_obj.readlines()\n",
     "\n",
     "for line in content[:20]:\n",
-    "    print(line.strip().split(','))\n",
-    "    "
+    "    print(line.strip().split(','))"
    ]
   },
   {
@@ -834,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -845,7 +898,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['AAR', 'BYDEL', 'ALDER', 'STATKODE', 'PERSONER']\n"
+      "['2015', '1', '0', '5100', '614']\n"
      ]
     }
    ],
@@ -856,7 +909,8 @@
     "with open(filename) as f:\n",
     "    reader = csv.reader(f)\n",
     "    header_row = next(reader)\n",
-    "    print(header_row)\n"
+    "    header_row = next(reader)\n",
+    "    p#rint(header_row)\n"
    ]
   },
   {
@@ -875,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -6045,7 +6099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -6073,7 +6127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
