added guide to import from sibling folder to 02-0c

--- a/02-0b Functions.ipynb
+++ b/02-0b Functions.ipynb
@@ -14,14 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Call me Ishmael.\n"
+      "Call me Ishmael.\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -31,9 +32,17 @@
     "    \n",
     "    fst_sentence = 'Call me Ishmael.'\n",
     "    print(fst_sentence)\n",
+    "    return 'hoho'\n",
     "    \n",
-    "print_sentence()"
+    "print(type(print_sentence()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,29 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "It is a string\n",
       "Call me Ahab.\n"
      ]
     }
    ],
    "source": [
-    "def modify_sentence(name):\n",
+    "def modify_sentence(name, age, address):\n",
     "    \"\"\"Display a modified first sentence of Moby Dick\n",
-    "\n",
     "    :param name: str\n",
     "        Name to insert in the sentence.\n",
     "    \"\"\"\n",
-    "    \n",
+    "    if type(name) is str:\n",
+    "        print('It is a string')\n",
     "    fst_sentence = 'Call me ' + name + '.'\n",
     "    print(fst_sentence)\n",
     "    \n",
-    "modify_sentence('Ahab')"
+    "modify_sentence('Niels',23)"
    ]
   },
   {
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +284,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-e9058f67fdcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mapply_division\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-3e05b4fed47b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mapply_division\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: apply_division() missing 1 required positional argument: 'dividend'"
      ]
     }
@@ -334,6 +344,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# function can return different data types\n",
+    "import random\n",
+    "def returnAny():\n",
+    "    lst = [3,'hej',2.3]\n",
+    "    return random.choice(lst)\n",
+    "\n",
+    "returnAny()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grethe'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def returnMulti():\n",
+    "    return 'Hans','Grethe'\n",
+    "child1,child2 = returnMulti()\n",
+    "child2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -385,7 +444,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'tuple'>\n",
       "- Ahab\n",
+      "<class 'tuple'>\n",
       "- Ahab\n",
       "- Ishmael\n",
       "- Queequeg\n"
@@ -395,7 +456,7 @@
    "source": [
     "def hire_crew(*sailors):\n",
     "    \"\"\"Print the list of hired crew members.\"\"\"\n",
-    "    \n",
+    "    #print(type(sailors))\n",
     "    for sailor in sailors:\n",
     "        print('- ' + sailor)\n",
     "\n",
@@ -455,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -464,7 +525,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'albert', 'field': 'physics', 'last_name': 'einstein', 'location': 'princeton'}\n"
+      "{'first_name': 'albert', 'last_name': 'einstein'}\n"
      ]
     }
    ],
@@ -498,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
