--- a/02-0c Modules.ipynb
+++ b/02-0c Modules.ipynb
@@ -22,10 +22,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: './test_dir'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-dffe852d6318>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pinfo'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'os.makedirs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./test_dir'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.anaconda3/lib/python3.7/os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    219\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m         \u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[0;31m# Cannot rely on checking for EEXIST, since the operating system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: './test_dir'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -54,26 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 5\n",
-      "1 1\n",
-      "2 5\n",
-      "3 2\n",
-      "4 2\n",
-      "5 2\n",
-      "6 5\n",
-      "7 3\n",
-      "8 4\n",
-      "9 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -101,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random as r\n",
     "\n",
@@ -140,23 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141592653589793\n",
-      "-1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from math import *\n",
-    "\n",
-    "print(pi)\n",
-    "print(cos(pi))"
+    "#from math import *\n",
+    "import math\n",
+    "print(math.pi)\n",
+    "print(math.cos(pi))"
    ]
   },
   {
@@ -180,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import choice\n",
     "\n",
@@ -202,20 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import choice, randrange\n",
     "\n",
@@ -250,20 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import choice as ch\n",
     "from random import randrange as rr\n",
@@ -274,17 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello from module\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sub_folder import my_test\n",
     "my_test.print_string('hello from module')"
@@ -292,10 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is only necessary in the notebook, when you want to reload \n",
@@ -305,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading file to ./2701-0.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload 2\n",
     "\n",
@@ -329,17 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URMPF\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from urllib.parse import urlparse\n",
     "\n",
@@ -355,11 +270,25 @@
    "metadata": {},
    "source": [
     "## Import function from sub folder\n",
-    "The folder must have a file __init__.py (can just be an empty file) for python to accept it as a package.  \n",
+    "The folder must have a file `__init__.py` (can just be an empty file) for python to accept it as a package.  \n",
     "The folder name and file name must adhere to python naming rules (start with letter and use only letters, number and _)\n",
     "To import file from a subfolder do this:\n",
     "1. in the subfolder create a file: __init__.py\n",
     "2. in you code: `from folder_name.file_name import func_name`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## import python module from sibling folder\n",
+    "#### reference: https://needone.app/python-importing-explained/\n",
+    "1. create a top root folder with a __init__.py file (can be empty)\n",
+    "2. in each sub folder with .py files create __init__.py files\n",
+    "3. when using import statements use Absolute Importing\n",
+    "  - `from rootfolder.subfolder import pyfile_module`\n",
+    "4. run python with -m flag from terminal `python -m rootfolder.subfolder.file` file is without .py e.g running the mod1 from this project `python -m import_demo.sub1.mod1`\n",
+    "  - if run like this: `python import_demo/sub1/mod1.py` we get a ModuleNotFoundError: No module named 'import_demo'. This is because mod1.py is run with __name__ == '__main__' and __package__ == None, so python has no way of knowing how to find mod2 that is attempted to be imported from mod1."
    ]
   },
   {
@@ -416,20 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = tuple([1,2])\n",
     "l = list(t)\n",
@@ -438,20 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParseResult(scheme='https', netloc='docs.python.org', path='/3/library/urllib.parse.html', params='', query='', fragment='module-urllib.parse')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from urllib.parse import urlparse\n",
     "url = 'http://data.kk.dk/dataset/76ecf368-bf2d-46a2-bcf8-adaf37662528/resource/9286af17-f74e-46c9-a428-9fb707542189/download/befkbhalderstatkode.csv'\n",
@@ -459,6 +366,25 @@
     "parsed_python_url\n",
     "#parsed_kk_url = urlparse(url)\n",
     "#parsed_kk_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_module\n",
+      "hello Hansen from module\n"
+     ]
+    }
+   ],
+   "source": [
+    "import my_module\n",
+    "my_module.print_name('Hansen')"
    ]
   }
  ],
