--- a/02-2 Working with Files.ipynb
+++ b/02-2 Working with Files.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -32,6 +32,9 @@
      "output_type": "stream",
      "text": [
       "Downloading file to ./pi_30_digits.txt\n",
+      "3.1415926535\n",
+      "  8979323846\n",
+      "  2643383279\n",
       "\n"
      ]
     }
@@ -45,7 +48,8 @@
     "\n",
     "with open('pi_30_digits.txt') as file_object:\n",
     "    contents = file_object.read()\n",
-    "print(file_object.read())\n"
+    "    \n",
+    "print(contents)\n"
    ]
   },
   {
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -152,6 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class '_io.TextIOWrapper'>\n",
       "3.1415926535\n",
       "\n",
       "  8979323846\n",
@@ -163,6 +168,7 @@
    ],
    "source": [
     "with open('pi_30_digits.txt') as file_object:\n",
+    "    print(type(file_object))\n",
     "    for line in file_object:\n",
     "        print(line)"
    ]
@@ -284,7 +290,7 @@
    "source": [
     "filename = 'pi_30_digits.txt'\n",
     "\n",
-    "with open(filename) as file_object:\n",
+    "with open(filename,'r') as file_object:\n",
     "    lines = file_object.readlines()\n",
     "\n",
     "pi_string = ''\n",
@@ -565,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -612,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -622,10 +628,10 @@
     {
      "data": {
       "text/plain": [
-       "dict"
+       "{'1': 'a', '2': [1, 2, 3]}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +645,7 @@
     "with open(filename) as f_obj: \n",
     "    de_numbers = json.load(f_obj)\n",
     "\n",
-    "type(de_numbers)"
+    "de_numbers"
    ]
   },
   {
@@ -832,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +874,35 @@
     "    content = f_obj.readlines()\n",
     "\n",
     "for line in content[:20]:\n",
-    "    print(line.strip().split(','))"
+    "    print(line.strip().split(','))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1992,99,76,5272,1\\n',\n",
+       " '1992,99,77,5100,1\\n',\n",
+       " '1992,99,78,5100,5\\n',\n",
+       " '1992,99,79,5100,2\\n',\n",
+       " '1992,99,80,5100,1\\n',\n",
+       " '1992,99,81,5100,1\\n',\n",
+       " '1992,99,87,5100,2\\n',\n",
+       " '1992,99,89,5100,1\\n',\n",
+       " '1992,99,90,5180,1\\n']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content[-10:-1]"
    ]
   },
   {
@@ -887,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -898,6 +932,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['AAR', 'BYDEL', 'ALDER', 'STATKODE', 'PERSONER']\n",
       "['2015', '1', '0', '5100', '614']\n"
      ]
     }
@@ -909,8 +944,9 @@
     "with open(filename) as f:\n",
     "    reader = csv.reader(f)\n",
     "    header_row = next(reader)\n",
-    "    header_row = next(reader)\n",
-    "    p#rint(header_row)\n"
+    "    print(header_row)\n",
+    "    data_row1 = next(reader)\n",
+    "    print(data_row1)\n"
    ]
   },
   {
@@ -6805,6 +6841,36 @@
     "  with open('./kkdata.py', 'w') as out_file:\n",
     "      out_file.write('STATISTICS =' + pprint.pformat(new_data_dict))\n",
     "  ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-9afdbff7e689>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = list()"
    ]
   }
  ],
