--- a/10-0 Linear Algebra.ipynb
+++ b/10-0 Linear Algebra.ipynb
@@ -21,13 +21,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -40,18 +33,8 @@
     "* Feature engineering\n",
     "* Neural networks\n",
     "* Image processing\n",
-    "* Movement detection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Project!"
+    "* Movement detection\n",
+    "* Project work"
    ]
   },
   {
@@ -132,6 +115,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear algebra\n",
+    "##### Linear algebra is the branch of mathematics that deals with vector spaces.\n",
+    "Source: Data Science From Scratch, chapter 4.\n",
+    "\n",
+    "##### 4 important concepts we will work with are:\n",
+    "1. **vectors** (list of numbers)\n",
+    "2. **matrices** (matrix in plural) 2 dimensional list of numbers (list of vectors) or (one-hot-encoded relationships between x and y axis)\n",
+    "3. **vector space** (the n-dimensional coordinate system in which the vectors can move around)\n",
+    "4. **vector arithmetics** (addition, substraction, division and multiplication of vectors with vectors and vectors with scalars)\n",
+    "5. **dot products** sum of products of all elements of 2 vectors resulting in single value\n",
+    "6. **matrix products** 2 matrices joined to one where each row element from one matrix multiplied by each column element in another matrix summed up in each cell of the resulting matrix\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -140,7 +140,9 @@
    "source": [
     "## Vector operations\n",
     "\n",
-    "Vectors are list of numbers, and you can do a number of things with them!"
+    "Vectors are list of numbers, and you can do a number of things with them!\n",
+    "For more background understanding see this (almost 4 hour) course:  \n",
+    "https://www.youtube.com/watch?v=T3TpdPmTLso\n"
    ]
   },
   {
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -289,7 +291,7 @@
        "array([ 8, 12, 15,  5, 13])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,17 +299,6 @@
    "source": [
     "# Addition\n",
     "v + scalar"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "![](images/vector_addition.svg)"
    ]
   },
   {
@@ -435,6 +426,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](images/vector_addition.svg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -456,6 +458,7 @@
     }
    ],
    "source": [
+    "# ValueError vectors of different dimensions can not be added together\n",
     "v + p"
    ]
   },
@@ -1170,6 +1173,7 @@
    },
    "source": [
     "### Entry-wise product, Hadamard product\n",
+    "Is not a matrix product (see further down)\n",
     "\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Hadamard_product_qtl1.svg/220px-Hadamard_product_qtl1.svg.png)"
    ]
@@ -1347,15 +1351,13 @@
     }
    },
    "source": [
-    "### Matrix multiplication exercise\n",
+    "## Exercise Matrix multiplication\n",
     "\n",
     "Multiply the following matrix `m × q` by hand:\n",
     "```python\n",
     "m = np.array([[-2, 0, 1], [5, -4, 2], [7, -1, 3]])\n",
     "q = np.array([[0, 7], [-3, 2], [1, 5]])\n",
-    "```\n",
-    "\n",
-    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Matrix_multiplication_diagram_2.svg/313px-Matrix_multiplication_diagram_2.svg.png)"
+    "```"
    ]
   },
   {
@@ -1531,6 +1533,103 @@
    "source": [
     "q.T.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Real life example using the matrix multiplication\n",
+    "Building on this source: https://www.mff.cuni.cz/veda/konference/wds/proc/pdf06/WDS06_106_m8_Ulrychova.pdf\n",
+    "\n",
+    "Three persons p1,p2,p3 wants to buy some apples, bananas, clementines and eggplants. Each person wants to buy differing amounts and can buy them in two different shops S1, S2.\n",
+    "Which shop is the best for each person p1, p2, p3 to pay as little as possible?  \n",
+    "The individual prices and desired quantities of the commodities are given in the following tables:\n",
+    "\n",
+    "**Needed fruits and veggies**  \n",
+    "\n",
+    "|person|apple|banana|clementine|eggplant|\n",
+    "|--|--|--|--|--|\n",
+    "|p1|6|5|3|1|\n",
+    "|p2|3|6|2|2|\n",
+    "|p3|3|4|3|1|\n",
+    "\n",
+    "**Prices in the 2 shops**  \n",
+    "\n",
+    "|merchandise|S1| S2|\n",
+    "|--|--|--|\n",
+    "|apples|1.50| 1.00|\n",
+    "|bananas |2.00| 2.50|\n",
+    "|clementines |5.00 |4.50|\n",
+    "|eggplants |16.00 |17.00|\n",
+    "\n",
+    "For example, the amount spent by the **person p1** would be:  \n",
+    "**Shop s1**: `6 · 1.50 + 5 · 2.00 + 3 · 5.00 + 1 · 16.00 = 50`  \n",
+    "**Shop s2**: `6 · 1.00 + 5 · 2.50 + 3 · 4.50 + 1 · 17.00 = 49`\n",
+    "\n",
+    "**The 2 metrices would look like this:**\n",
+    "\n",
+    "```\n",
+    "P = [[6,5,3,1],\n",
+    "     [3,6,2,2],\n",
+    "     [3,4,3,1]]\n",
+    "``` \n",
+    "and  \n",
+    "```\n",
+    "Q = [[1.50,  1.00],\n",
+    "     [2.00,  2.50],\n",
+    "     [5.00,  4.50],\n",
+    "     [16.00, 17.00]]\n",
+    "``` \n",
+    "The matrix product looks like this\n",
+    "```\n",
+    "R = PQ = [[50.00, 49.00],\n",
+    "          [58,50, 61.00],\n",
+    "          [43.50, 43.50]]\n",
+    "```\n",
+    "|persons|shop 1 sum of prod|shop 2 sum of prod|\n",
+    "|--|--|--|\n",
+    "|p1|50.00|49.00|\n",
+    "|p2|58.50|61.00|\n",
+    "|p3|43.50|43.50|\n",
+    "\n",
+    "##### Conclusion:\n",
+    "person 1 should go to shop 2  \n",
+    "person 2 should go to shop 1 and  \n",
+    "person 3 can go to either shop  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50. , 49. ],\n",
+       "       [58.5, 61. ],\n",
+       "       [43.5, 43.5]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Above calculation done with numpy:\n",
+    "\n",
+    "import numpy as np\n",
+    "P = np.array([[6,5,3,1],\n",
+    "     [3,6,2,2],\n",
+    "     [3,4,3,1]])\n",
+    "Q = np.array([[1.50,  1.00],\n",
+    "     [2.00,  2.50],\n",
+    "     [5.00,  4.50],\n",
+    "     [16.00, 17.00]])\n",
+    "R = P.dot(Q)\n",
+    "R "
+   ]
   }
  ],
  "metadata": {
@@ -1551,6 +1650,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
