--- a/02-0c Modules.ipynb
+++ b/02-0c Modules.ipynb
@@ -6,11 +6,20 @@
    "source": [
     "# Modules\n",
     "\n",
+    "#### Modules are Files\n",
+    "\n",
+    "Modules are actually just files with a `.py` ending. So if you write \n",
+    "```python\n",
+    "import string\n",
+    "```\n",
+    "You actually just fetch the `string.py` file.\n",
+    "\n",
+    "#### Modular code\n",
     "One advantage of functions is the way they separate blocks of code from your main program. By using descriptive names for your functions, your main program will be much easier to follow. You can go a step further by storing your functions in a separate file called a module and then importing that module into your main program. An import statement tells Python to make the code in a module available in the currently running program file.\n",
     "\n",
     "Storing your functions in a separate file allows you to hide the details of your program’s code and focus on its higher-level logic. It also allows you to reuse functions in many different programs. When you store your functions in separate files, you can share those files with other programmers without having to share your entire program. Knowing how to `import` functions also allows you to use libraries of functions that other programmers have written.\n",
     "\n",
-    "## Importing an Entire Module\n",
+    "#### Importing an Entire Module\n",
     "\n",
     "To start importing functions, we first need to create a module. A module is a file ending in `.py` that contains the code you want to import into your program.\n",
     "\n",
@@ -22,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "FileExistsError",
@@ -269,6 +280,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Let's make our own module!\n",
+    "\n",
+    "* Create a new file `global_warming.py`\n",
+    "* In the file, put these four lines of code:\n",
+    "```python\n",
+    "def global_warming_status():\n",
+    "      return 'The globe is heating up!'\n",
+    "status = global_warming_status()\n",
+    "print(status)\n",
+    "```\n",
+    "\n",
+    "* What is the code doing?\n",
+    "#### Test\n",
+    "* Save the file and run it via the terminal: `python global_warming.py`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## main method\n",
+    "- In python files all of the code that is at indentation level 0 gets executed. \n",
+    "- Functions and classes that are defined are, well, defined, but none of their code gets run. \n",
+    "- Unlike other languages, there's no main() function that gets run automatically \n",
+    "- ***the main() function is implicitly all the code at the top level***.\n",
+    "\n",
+    "- In this case, the top-level code is an if block.  \n",
+    "- __name__ is a built-in variable which evaluates to the name of the current module. \n",
+    "- However, if a module is being run directly (as in global_warming.py above), then __name__ instead is set to the string \"__main__\". \n",
+    "- Thus, you can test whether your script is being run directly or being imported by something else by testing\n",
+    "    - `if __name__ == \"__main__\":`\n",
+    "    \n",
+    "- If your script is being imported into another module, its various function and class definitions will be imported and its top-level code will be executed, but the code in the then-body of the if clause above won't get run as the condition is not met. \n",
+    "- As a basic example, consider the following two scripts:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First file: one.py\n",
+    "```python\n",
+    "# file one.py\n",
+    "def func():\n",
+    "    print(\"func() in one.py\")\n",
+    "\n",
+    "print(\"top-level in one.py\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"one.py is being run directly\")\n",
+    "else:\n",
+    "    print(\"one.py is being imported into another module\")\n",
+    "```\n",
+    "#### Second file: two.py\n",
+    "is importing one.py\n",
+    "\n",
+    "```python\n",
+    "# file two.py\n",
+    "import one\n",
+    "\n",
+    "print(\"top-level in two.py\")\n",
+    "one.func()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"two.py is being run directly\")\n",
+    "else:\n",
+    "    print(\"two.py is being imported into another module\")\n",
+    "```\n",
+    "\n",
+    "Running file: two.py:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python my_modules/two.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import function from sub folder\n",
     "The folder must have a file `__init__.py` (can just be an empty file) for python to accept it as a package.  \n",
     "The folder name and file name must adhere to python naming rules (start with letter and use only letters, number and _)\n",
@@ -344,47 +440,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "t = tuple([1,2])\n",
-    "l = list(t)\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from urllib.parse import urlparse\n",
-    "url = 'http://data.kk.dk/dataset/76ecf368-bf2d-46a2-bcf8-adaf37662528/resource/9286af17-f74e-46c9-a428-9fb707542189/download/befkbhalderstatkode.csv'\n",
-    "parsed_python_url = urlparse('https://docs.python.org/3/library/urllib.parse.html#module-urllib.parse')\n",
-    "parsed_python_url\n",
-    "#parsed_kk_url = urlparse(url)\n",
-    "#parsed_kk_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my_module\n",
-      "hello Hansen from module\n"
-     ]
-    }
-   ],
-   "source": [
-    "import my_module\n",
-    "my_module.print_name('Hansen')"
+    "## Exercise continued\n",
+    "#### Import from a sibling folder\n",
+    "1. Create a folder called my_libs and put your webget.py file inside.\n",
+    "2. Create another folder next to my_libs with a file: test.py\n",
+    "3. Let test.py import webget and run the download function to get some data from the net"
    ]
   }
  ],
