--- a/02-4 Exceptions.ipynb
+++ b/02-4 Exceptions.ipynb
@@ -254,12 +254,12 @@
    "source": [
     "# Raising and Implementing Exceptions\n",
     "\n",
-    "In case you need to raise your own exceptions, you can do so with the help of the `raise` keyword. To implement your own exception you have to implement a subclass of the type of exception that is closest to your new type of error as illustrated in the following."
+    "In case you need to raise your own exceptions, you can do so with the help of the `raise` keyword. To implement your own exception you have to implement a subclass of the type of exception that is closest to your new type of error as illustrated in the following.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -268,13 +268,13 @@
    "outputs": [
     {
      "ename": "NoOneValueError",
-     "evalue": "Oha, 1 is not in [2, 7, 8, 10, 'aha']!",
+     "evalue": "Oh no, 1 is not in [2, 7, 8, 10, 'aha']!",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNoOneValueError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-b32cbd28ffd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Alright!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNoOneValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Oha, {} is not in {}!'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msome_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNoOneValueError\u001b[0m: Oha, 1 is not in [2, 7, 8, 10, 'aha']!"
+      "\u001b[0;32m<ipython-input-30-27d912b3d1f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Alright!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNoOneValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Oh no, {} is not in {}!'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msome_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNoOneValueError\u001b[0m: Oh no, 1 is not in [2, 7, 8, 10, 'aha']!"
      ]
     }
    ],
@@ -291,6 +291,17 @@
     "    print('Alright!')\n",
     "else:\n",
     "    raise NoOneValueError('Oh no, {} is not in {}!'.format(value, some_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or in simpler ways just extend the Exception class with no implementation like this:  \n",
+    "```python\n",
+    "class InvalidArgumentException(Exception):\n",
+    "    pass\n",
+    "```"
    ]
   },
   {
@@ -323,6 +334,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
