--- a/05-1 DateTime.ipynb
+++ b/05-1 DateTime.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -56,16 +56,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-12-15\n"
+      "2020-02-05\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "datetime.date(2019, 12, 15)"
+       "datetime.date(2020, 2, 5)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -91,22 +91,22 @@
     {
      "data": {
       "text/plain": [
-       "datetime.date(2019, 10, 2)"
+       "datetime.date(2020, 2, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "today = date(today.year, 10, 2)\n",
+    "today = date(today.year, today.month, today.day)\n",
     "today"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -119,20 +119,20 @@
        "7"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "next_lecture = date(today.year, 10, 9)\n",
+    "next_lecture = date(today.year, today.month, today.day+7)\n",
     "time_to_next_lecture = abs(next_lecture - today)\n",
     "time_to_next_lecture.days"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -142,19 +142,15 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "240"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from datetime import timedelta\n",
-    "# see the timedelta documentation:\n",
-    "# https://docs.python.org/3.6/library/datetime.html#timedelta-objects\n",
-    "\n",
     "next_lecture = date(today.year, 10, 2) + timedelta(5)\n",
     "time_to_next_lecture = abs(next_lecture - today)\n",
     "time_to_next_lecture.days"
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -296,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 1, 22, 12, 30)"
+       "datetime.datetime(2020, 2, 5, 12, 30)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -365,10 +361,10 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 1, 22, 15, 30, 29, 178618)"
+       "datetime.datetime(2020, 2, 5, 8, 4, 7, 996797)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,22 +397,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wednesday, 22. January 2020 05:08PM\n"
+      "Wednesday, 05. February 2020 09:32AM\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Time now is: Wednesday 2020-02-05 09:32:57:789744'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using datetime (or time or date) .strftime() to convert datetime to string. See https://docs.python.org/3/library/datetime.html#strftime-strptime-behavior\n",
     "now = datetime.now()\n",
     "date_string = now.strftime(\"%A, %d. %B %Y %I:%M%p\")\n",
-    "print(date_string)"
+    "print(date_string)\n",
+    "# or using string format with new style: https://pyformat.info/ \n",
+    "'Time now is: {:%A %Y-%m-%d %H:%M:%S:%f}'.format(datetime.now())"
    ]
   },
   {
@@ -487,30 +495,35 @@
    "source": [
     "## Timedeltas\n",
     "\n",
-    "A `timedelta` object represents a duration, the difference between two dates or times."
+    "A `timedelta` object represents a duration, the difference between two dates or times.\n",
+    "\n",
+    "#### see the timedelta documentation:\n",
+    "https://docs.python.org/3.7/library/datetime.html#timedelta-objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0, 0, 5)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smallest possible timedelta:\t -999999999 days, 0:00:00\n",
+      "largest possible timedelta:\t 999999999 days, 23:59:59.999999\n",
+      "internal representation:\t datetime.timedelta(days=9, seconds=11045, microseconds=999)\n"
+     ]
     }
    ],
    "source": [
     "from datetime import timedelta\n",
     "\n",
-    "d = timedelta(microseconds=5)\n",
-    "(d.days, d.seconds, d.microseconds)"
+    "print('smallest possible timedelta:\\t',timedelta.min)\n",
+    "print('largest possible timedelta:\\t', timedelta.max)\n",
+    "t= timedelta(weeks=1, days=2, hours=3, minutes=4, seconds=5, microseconds=999)\n",
+    "# timedelta internally translates all to days, seconds and microseconds\n",
+    "print('internal representation:\\t',repr(t))"
    ]
   },
   {
@@ -770,7 +783,7 @@
    "source": [
     "# Class exercise with dates\n",
     "Create a function: get_meeting_dates in a module called myUtilities.py\n",
-    "- the function must take 3 arguments (period_as_timedelta, time_of_day, number_of_meetings, start_date=now())\n",
+    "- the function must take 4 arguments (period_as_timedelta, time_of_day, number_of_meetings, start_date=now())\n",
     "- the function should then return a list of datetimes for a series of meetings that should take place from start_date and evenly distributed throughout the period.\n",
     "- create another list of number of attendents, that was actually there at each meeting.\n",
     "- create a bar plot of attendance through the series of meetings."
@@ -861,6 +874,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
