--- a/05-3 pandas.ipynb
+++ b/05-3 pandas.ipynb
@@ -3310,13 +3310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<gesmes:Envelope xmlns:gesmes=\"http://www.gesmes.org/xml/2002-08-01\" xmlns=\"http://www.ecb.int/vocabulary/2002-08-01/eurofxref\">\\n\\t<gesmes:subject>Reference rates</gesmes:subject>\\n\\t<gesmes:Sender>\\n\\t\\t<gesmes:name>European Central Bank</gesmes:name>\\n\\t</gesmes:Sender>\\n\\t<Cube>\\n\\t\\t<Cube time=\\'2020-02-05\\'>\\n\\t\\t\\t<Cube currency=\\'USD\\' rate=\\'1.1023\\'/>\\n\\t\\t\\t<Cube currency=\\'JPY\\' rate=\\'120.94\\'/>\\n\\t\\t\\t<Cube currency=\\'BGN\\' rate=\\'1.9558\\'/>\\n\\t\\t\\t<Cube currency=\\'CZK\\' rate=\\'25.055\\'/>\\n\\t\\t\\t<Cube currency=\\'DKK\\' rate=\\'7.4728\\'/>\\n\\t\\t\\t<Cube currency=\\'GBP\\' rate=\\'0.84444\\'/>\\n\\t\\t\\t<Cube currency=\\'HUF\\' rate=\\'335.76\\'/>\\n\\t\\t\\t<Cube currency=\\'PLN\\' rate=\\'4.2491\\'/>\\n\\t\\t\\t<Cube currency=\\'RON\\' rate=\\'4.7734\\'/>\\n\\t\\t\\t<Cube currency=\\'SEK\\' rate=\\'10.5450\\'/>\\n\\t\\t\\t<Cube currency=\\'CHF\\' rate=\\'1.0717\\'/>\\n\\t\\t\\t<Cube currency=\\'ISK\\' rate=\\'138.10\\'/>\\n\\t\\t\\t<Cube currency=\\'NOK\\' rate=\\'10.1173\\'/>\\n\\t\\t\\t<Cube currency=\\'HRK\\' rate=\\'7.4568\\'/>\\n\\t\\t\\t<Cube currency=\\'RUB\\' rate=\\'69.0320\\'/>\\n\\t\\t\\t<Cube currency=\\'TRY\\' rate=\\'6.5975\\'/>\\n\\t\\t\\t<Cube currency=\\'AUD\\' rate=\\'1.6299\\'/>\\n\\t\\t\\t<Cube currency=\\'BRL\\' rate=\\'4.6614\\'/>\\n\\t\\t\\t<Cube currency=\\'CAD\\' rate=\\'1.4644\\'/>\\n\\t\\t\\t<Cube currency=\\'CNY\\' rate=\\'7.6858\\'/>\\n\\t\\t\\t<Cube currency=\\'HKD\\' rate=\\'8.5572\\'/>\\n\\t\\t\\t<Cube currency=\\'IDR\\' rate=\\'15036.47\\'/>\\n\\t\\t\\t<Cube currency=\\'ILS\\' rate=\\'3.7981\\'/>\\n\\t\\t\\t<Cube currency=\\'INR\\' rate=\\'78.4330\\'/>\\n\\t\\t\\t<Cube currency=\\'KRW\\' rate=\\'1302.97\\'/>\\n\\t\\t\\t<Cube currency=\\'MXN\\' rate=\\'20.4923\\'/>\\n\\t\\t\\t<Cube currency=\\'MYR\\' rate=\\'4.5382\\'/>\\n\\t\\t\\t<Cube currency=\\'NZD\\' rate=\\'1.7006\\'/>\\n\\t\\t\\t<Cube currency=\\'PHP\\' rate=\\'55.961\\'/>\\n\\t\\t\\t<Cube currency=\\'SGD\\' rate=\\'1.5202\\'/>\\n\\t\\t\\t<Cube currency=\\'THB\\' rate=\\'34.133\\'/>\\n\\t\\t\\t<Cube currency=\\'ZAR\\' rate=\\'16.2246\\'/>\\n\\t\\t</Cube>\\n\\t</Cube>\\n</gesmes:Envelope>'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
@@ -3450,6 +3461,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
