--- a/03-Exercise.ipynb
+++ b/03-Exercise.ipynb
@@ -15,7 +15,7 @@
     "6. In student create a method: get_avg_grade()\n",
     "7. Create a function that can generate n number of students with random: name, gender, courses (from a fixed list of course names), grades, img_url\n",
     "   1. Let the function write the result to a csv file with format stud_name, course_name, teacher, ects, classroom, grade, img_url\n",
-    "7. Read student data into a list from a csv file: \n",
+    "7. Read student data into a list of Students from a csv file: \n",
     "   1. loop through the list and print each student with name, img_url and avg_grade.\n",
     "   2. sort the list by avg_grade\n",
     "   3. create a bar chart with student_name on x and avg_grade on y-axis\n",
