--- a/03-2 Exceptions.ipynb
+++ b/03-2 Exceptions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -28,19 +28,22 @@
    },
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ca8321cec4b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occured\n",
+      "continue...\n"
      ]
     }
    ],
    "source": [
-    "print(5 / 0)"
+    "try:\n",
+    "    print(5 / 0)\n",
+    "except:\n",
+    "    print('An error occured')\n",
+    "else:\n",
+    "    print('run rest of program') \n",
+    "print('continue...')"
    ]
   },
   {
@@ -78,6 +81,26 @@
     "try:\n",
     "    print(5/0)\n",
     "except ZeroDivisionError:\n",
+    "    print(\"You can't divide by zero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can't divide by zero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    raise Exc\n",
+    "except (ZeroDivisionError,Exception) as e:\n",
     "    print(\"You can't divide by zero!\")"
    ]
   },
@@ -259,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -273,7 +296,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNoOneValueError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-27d912b3d1f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Alright!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNoOneValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Oh no, {} is not in {}!'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msome_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-27d912b3d1f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Alright!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNoOneValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Oh no, {} is not in {}!'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msome_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNoOneValueError\u001b[0m: Oh no, 1 is not in [2, 7, 8, 10, 'aha']!"
      ]
     }
@@ -312,7 +335,7 @@
     "1. Create a class called: Person with a constructor that takes a string: name.\n",
     "2. Check if name contains only letters and each new word starts with a capital letter. If this is not the case raise an InvalidArgumentException (your own exception here)\n",
     "\n",
-    "3. Test you new class by making 2 instances (one with a name, that follows the rules and another that violates them)"
+    "3. Test your new class by making 2 instances (one with a name, that follows the rules and another that violates them)"
    ]
   }
  ],
