minor change to 03-Exercise

--- a/03-Exercise.ipynb
+++ b/03-Exercise.ipynb
@@ -20,7 +20,7 @@
     "   2. sort the list by avg_grade\n",
     "   3. create a bar chart with student_name on x and avg_grade on y-axis\n",
     "8. Make a method on Student class that can show progression of the study in % (add up ECTS from all passed courses divided by total of 150 total points (equivalent to 5 semesters))\n",
-    "9. Show a line graph of distribution of study progression on x-axis and number of students in each category on y-axis. (e.g. make 10 categories from 0-100%)\n",
+    "9. Show a bar chart of distribution of study progression on x-axis and number of students in each category on y-axis. (e.g. make 10 categories from 0-100%)\n",
     "\n",
     "Extra: Make the Datasheet class iterable so that next(data_sheet) will return the next course in the list\n",
     "\n",
